<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_string">Welcome! Tap to begin</string>
    <string name="oneplay">One Player</string>
    <string name="twoplay">Two Players</string>
    <string name="notReady">AI is not ready for single player games</string>
    <string name="title_activity_game">Let\'s Play!</string>
    <string name="game_board">The Tic Tac Toe game board</string>
    <string name="reset_button">New Game</string>
    <string name="draw_string">Draw!</string>
    <string name="o_win">O\'s win the game!</string>
    <string name="x_win">X\'s win the game!</string>
    <string name="new_game">New Game</string>
    <string name="make_move">Player, make a move</string>
    <string name="cell">cell</string>
    <string name="title_activity_settings">Settings</string>
    <string name="x">X\'s</string>
    <string name="o">O\'s</string>
    <string name="ai_selection">What should the AI use?</string>
    <string name="ai_selection_pref">AI_SELECTION_PREF</string>
    
    <string name="x_first">X\'s go first</string>
    <string name="o_first">O\'s go first</string>
    <string name="ai_difficulty">What level of difficulty should the AI be?</string>
    <string name="ai_difficulty_pref">AI_DIFFICULTY_PREF</string>
    

    <item name="x_int" type="integer" format="integer">2</item>
    <item name="o_int" type="integer" format="integer" >1</item>
    <item name="ai_difficulty_pref_default" type="integer" format="integer">1</item>
    <item name="ai_selection_pref_default" type="integer" format="integer">1</item>
    <string name="preference_file_key">com.nicolo.tictactoe.PREFSFILE</string>
    
    <item name="card_flip_time_full" type="integer" format="integer">300</item>
    <item name="card_flip_time_half" type="integer" format="integer">150</item>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_confirm_exit">Are you sure you want to exit this unfinished game?</string>
    <string name="new_game_info">Swipe left or right on the board to start a new game</string>
    <string name="animation_view">The view to animate game status</string>
    <string name="chev_right_desc">ImageView for chevron right</string>
    <string name="chev_left_desc">ImageView for chevron left</string>
</resources>