<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

    <RelativeLayout
        android:id="@+id/board_fragment"
        android:name="com.nicolo.tictactoe.BoardFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/infoPane"
        tools:layout="@layout/board_fragment" />

    <LinearLayout
        android:id="@+id/infoPane"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:weightSum="3" >
        
        <ImageView
            android:id="@+id/chevron_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/chev_left_desc"
            android:rotation="90"
            android:scaleType="centerInside"
            android:src="@drawable/chevron"
            android:layout_weight="1" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_game_info"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/chevron_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/chev_right_desc"
            android:rotation="270"
            android:scaleType="centerInside"
            android:src="@drawable/chevron"
            android:layout_weight="1" />

   </LinearLayout>	

</RelativeLayout>